--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  background-color: #191414;
+}
+
 .App {
   text-align: center;
 }
@@ -14,24 +18,24 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: white; */
 }
 
-.App-link {
+/* .App-link {
   color: #61dafb;
-}
+} */
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
-  }
+  } 
   to {
     transform: rotate(360deg);
   }
